--- a/public/pizzeriai.html
+++ b/public/pizzeriai.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="/src/css/style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Pizza</h1>
-        <ul id="producto-list" class="producto-list"></ul>
-    </div>
+    <header>
+        <h1>Nuestra Pizzería</h1>
+    </header>
+    <main>
+        <ul id="productos" class="productos"></ul>
+    </main>
+    <script src="/src/js/script.js"></script>
 </body>
 </html>
