agrege nuevo contenido en productto

--- a/public/pizzeriai.html
+++ b/public/pizzeriai.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="/src/css/style.css">
 </head>
 <body>
-    <header>
-        <h1>Nuestra Pizzería</h1>
-    </header>
+    <div class="produtos">
+        <h1>Nuestra Pizza</h1>
+    </div>
     <main>
-        <ul id="productos" class="productos"></ul>
+        <ul id="productos" class=""></ul>
     </main>
     <script src="/src/js/script.js"></script>
 </body>
