--- a/public/producto.html
+++ b/public/producto.html
@@ -4,21 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizzahaha</title>
+    <link rel="stylesheet" href="/src/css/style.css">
 </head>
 <body>
-    <div class="productosgit ">
-        
-        <div id="producto-details" class="producto">
-            
-        </div>
-    </div>
+    <header>
+        <h1>Detalle del Producto</h1>
+    </header>
+    <main>
+        <section id="detalle-producto" class="producto"></section>
+        <p class="precio"></p>
+    </main>
+    <script src="/src/js/producto.js"></script>
 </body>
 </html> 
-
-<div class="producto">
-    <img src="pizza-margherita.jpg" alt="Pizza Margherita">
-    <h2>Pizza Margherita</h2>
-    <p>Mozzarella fresca, tomates, albahaca.</p>
-    <p class="precio">$12.99</p>
-    <button>Ordenar</button>
-</div>
